--- a/src/css/style.css
+++ b/src/css/style.css
@@ -564,6 +564,10 @@ video {
   margin-right: 1rem;
 }
 
+.mt-5 {
+  margin-top: 1.25rem;
+}
+
 .mt-8 {
   margin-top: 2rem;
 }
@@ -614,6 +618,11 @@ video {
 
 .rounded-md {
   border-radius: 0.375rem;
+}
+
+.bg-\[\#1c1c1c\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(28 28 28 / var(--tw-bg-opacity));
 }
 
 .bg-purple-500 {
@@ -713,6 +722,14 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.underline {
+  text-decoration-line: underline;
+}
+
+.decoration-purple-500 {
+  text-decoration-color: #a855f7;
 }
 
 .transition {
